owui-extra-ingress/extra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owui-external
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
  labels:
    cf-external: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ll.misanthropy.info
      http:
        paths:
          - path: /OW(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  name: http
  tls: []
